--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,36 @@
-/* General Body and Layout */
 body {
   font-family: Arial, sans-serif;
-  background-color: #f0f0f0;
+  background-color: #f7f7f7;
   margin: 0;
   padding: 0;
   color: #222;
+  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
 }
 
 .recipes-container {
   max-width: 1200px;
-  margin: 20px auto; /* Centers the container horizontally */
-  padding: 20px;
+  width: 90%; 
+  margin: 20px auto;
+  padding: 0 20px 20px; /
 }
 
 h1 {
-  text-align: center;
-  font-size: 2em;
-  color: #444;
-  margin-bottom: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f39c12; 
+  color: white;
+  font-size: 1.5em;
   font-weight: bold;
+  height: 50px; 
+  margin: 0 -20px 25px; 
+  text-transform: uppercase;
+  letter-spacing: 2px;
 }
 
 .loading, .error {
@@ -32,24 +44,43 @@ h1 {
   color: #d9534f;
 }
 
-/* Responsive Flexbox Layout */
+
 .recipe-grid {
   display: flex;
-  flex-wrap: wrap; /* Allows items to wrap to a new line */
-  justify-content: center; /* Centers the items horizontally */
-  gap: 15px; /* Spacing between the cards */
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
 }
 
-/* Individual recipe card */
+
 .recipe-card {
-  /* This is the key to flexibility. Items will grow and shrink to fit, with a minimum width of 250px. */
-  flex: 1 1 250px; 
-  
+  width: 280px;
+  flex-shrink: 0;
   background-color: #fff;
   border: 1px solid #ccc;
   border-radius: 5px;
   overflow: hidden;
   padding: 10px;
+  cursor: pointer;
+  transition: all 0.5s ease-in-out;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
+}
+
+.recipe-card:hover {
+  transform: scale(1.02);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+
+.recipe-card.expanded {
+  width: 100%;
+  flex-basis: 100%;
+  height: auto;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15); 
 }
 
 .recipe-image {
@@ -57,6 +88,10 @@ h1 {
   height: 180px;
   object-fit: cover;
   border-radius: 5px;
+}
+
+.recipe-card.expanded .recipe-image {
+  display: none;
 }
 
 .recipe-content {
@@ -72,4 +107,34 @@ h1 {
 .recipe-content p {
   margin: 3px 0;
   color: #555;
-  font-size: 0.
+  font-size: 0.9em;
+}
+
+.expanded-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.expanded-image {
+  max-width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 8px;
+}
+
+.expanded-details-text {
+  padding-left: 20px;
+}
+
+.expanded-details-text h4 {
+  margin-top: 20px;
+  margin-bottom: 5px;
+  color: #333;
+}
+
+.expanded-details-text ol {
+  padding-left: 20px;
+  text-align: left;
+}
